Added link to github help to contribution page

--- a/contribute.html
+++ b/contribute.html
@@ -119,6 +119,7 @@ h3 {
       |&nbsp;&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
 |&nbsp;&nbsp;
 
+
       <a class="menu" href="docs.html">docs</a>&nbsp; |&nbsp;&nbsp; <a
         style="text-decoration: overline; color: black;" class="menu"
         href="contribute.html">contribute</a>&nbsp; |&nbsp;&nbsp; <a
@@ -186,7 +187,10 @@ h3 {
                   href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>
                 that describes your contribution. </li>
               <li>Get a github account.</li>
-              <li>Fork the branch that you would like to work with.</li>
+              <li>Fork the branch that you would like to work with (see
+                <a target="_blank"
+                  href="http://help.github.com/fork-a-repo/">github help</a>).<br>
+              </li>
               <li>Issue a pull request when ready.</li>
             </ol>
           </td>
@@ -203,9 +207,11 @@ h3 {
               charset=UTF-8">
             <p class="western" style="margin-bottom: 0in" lang="en-US">This
 
+
               informnation refers to pyspread v. 0.2.2. <br>
               Version 0.1.2 and previous have a different structure.</p>
             <p class="western" style="margin-bottom: 0in" lang="en-US">The
+
 
               code is organized in the src folder. There are the
               following sub-folders:</p>
@@ -332,6 +338,7 @@ h3 {
             <p class="western" style="margin-bottom: 0in" lang="en-US">wxPython
 related
 
+
               code can be found </p>
             <ul>
               <li>
@@ -374,6 +381,7 @@ related
             </ul>
             <p class="western" style="margin-bottom: 0in" lang="en-US">The
 
+
               latter is necessary in order to use the wx constants in
               config.py</p>
             <p class="western" style="margin-bottom: 0in" lang="en-US"><br>
@@ -407,6 +415,7 @@ related
     </table>
     <p> </p>
     <p><span style="font-style: italic;"><small>C<font size="-1">opyright
+
 
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
