Typo fixed in contribution page

--- a/contribute.html
+++ b/contribute.html
@@ -120,6 +120,7 @@ h3 {
 |&nbsp;&nbsp;
 
 
+
       <a class="menu" href="docs.html">docs</a>&nbsp; |&nbsp;&nbsp; <a
         style="text-decoration: overline; color: black;" class="menu"
         href="contribute.html">contribute</a>&nbsp; |&nbsp;&nbsp; <a
@@ -206,91 +207,30 @@ h3 {
             <meta http-equiv="CONTENT-TYPE" content="text/html;
               charset=UTF-8">
             <p class="western" style="margin-bottom: 0in" lang="en-US">This
-
-
-              informnation refers to pyspread v. 0.2.2. <br>
+              information refers to pyspread v. 0.2.2. <br>
               Version 0.1.2 and previous have a different structure.</p>
-            <p class="western" style="margin-bottom: 0in" lang="en-US">The
+            <p class="western" style="margin-bottom: 0in;" lang="en-US">The
+
 
 
               code is organized in the src folder. There are the
               following sub-folders:</p>
-            <table cellpadding="4" cellspacing="0" width="100%">
-              <colgroup><col width="128*"> <col width="128*"> </colgroup><tbody>
-                <tr valign="TOP">
-                  <td style="border-top: 1px solid #000000;
-                    border-bottom: 1px solid #000000; border-left: 1px
-                    solid #000000; border-right: none; padding-top:
-                    0.04in; padding-bottom: 0.04in; padding-left:
-                    0.04in; padding-right: 0in" width="50%">
-                    <ul>
-                      <li>actions</li>
-                    </ul>
-                  </td>
-                  <td style="border: 1px solid #000000; padding: 0.04in"
-                    width="50%">
-                    <p class="western" lang="en-US">Actions that change
-                      the model</p>
-                  </td>
-                </tr>
-                <tr valign="TOP">
-                  <td style="border-top: none; border-bottom: 1px solid
-                    #000000; border-left: 1px solid #000000;
-                    border-right: none; padding-top: 0in;
-                    padding-bottom: 0.04in; padding-left: 0.04in;
-                    padding-right: 0in" width="50%">
-                    <ul>
-                      <li>gui</li>
-                    </ul>
-                  </td>
-                  <td style="border-top: none; border-bottom: 1px solid
-                    #000000; border-left: 1px solid #000000;
-                    border-right: 1px solid #000000; padding-top: 0in;
-                    padding-bottom: 0.04in; padding-left: 0.04in;
-                    padding-right: 0.04in" width="50%">
-                    <p class="western" lang="en-US">GUI elements
-                      including events</p>
-                  </td>
-                </tr>
-                <tr valign="TOP">
-                  <td style="border-top: none; border-bottom: 1px solid
-                    #000000; border-left: 1px solid #000000;
-                    border-right: none; padding-top: 0in;
-                    padding-bottom: 0.04in; padding-left: 0.04in;
-                    padding-right: 0in" width="50%">
-                    <ul>
-                      <li>model</li>
-                    </ul>
-                  </td>
-                  <td style="border-top: none; border-bottom: 1px solid
-                    #000000; border-left: 1px solid #000000;
-                    border-right: 1px solid #000000; padding-top: 0in;
-                    padding-bottom: 0.04in; padding-left: 0.04in;
-                    padding-right: 0.04in" width="50%">
-                    <p class="western" lang="en-US">Core data structure</p>
-                  </td>
-                </tr>
-                <tr valign="TOP">
-                  <td style="border-top: none; border-bottom: 1px solid
-                    #000000; border-left: 1px solid #000000;
-                    border-right: none; padding-top: 0in;
-                    padding-bottom: 0.04in; padding-left: 0.04in;
-                    padding-right: 0in" width="50%">
-                    <ul>
-                      <li>lib</li>
-                    </ul>
-                  </td>
-                  <td style="border-top: none; border-bottom: 1px solid
-                    #000000; border-left: 1px solid #000000;
-                    border-right: 1px solid #000000; padding-top: 0in;
-                    padding-bottom: 0.04in; padding-left: 0.04in;
-                    padding-right: 0.04in" width="50%">
-                    <p class="western" lang="en-US">Generically usable
-                      libraries</p>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <ul>
+              <li>actions: Actions that change the model<br>
+              </li>
+            </ul>
+            <ul>
+              <li>gui: GUI elements including events<br>
+              </li>
+            </ul>
+            <ul>
+              <li>model: Core data structure<br>
+              </li>
+            </ul>
+            <ul>
+              <li>lib: Generically usable libraries<br>
+              </li>
+            </ul>
             <p class="western" style="margin-bottom: 0in;" lang="en-US">
               <meta http-equiv="CONTENT-TYPE" content="text/html;
                 charset=UTF-8">
@@ -339,6 +279,7 @@ h3 {
 related
 
 
+
               code can be found </p>
             <ul>
               <li>
@@ -382,6 +323,7 @@ related
             <p class="western" style="margin-bottom: 0in" lang="en-US">The
 
 
+
               latter is necessary in order to use the wx constants in
               config.py</p>
             <p class="western" style="margin-bottom: 0in" lang="en-US"><br>
@@ -417,10 +359,11 @@ related
     <p><span style="font-style: italic;"><small>C<font size="-1">opyright
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font> </span><font size="-1"><span style="font-style:
-          italic;">Last changed: 01. May 2012 </span></font></p>
+          italic;">Last changed: 02. May 2012 </span></font></p>
   </body>
 </html>
