--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ h3 {
 
 
 
+
       |&nbsp;&nbsp; <a class="menu"
         href="https://github.com/manns/pyspread/issues" target="blank">bugs</a>
     </div>
@@ -183,6 +184,7 @@ h3 {
                 <li>Advanced statistics and plotting via <a
                     href="http://rpy.sourceforge.net/">RPy</a></li>
                 <li>Much more via <span style="font-style: italic;">&lt;your
+
                     favorite module&gt;</span></li>
               </ul>
             </ul>
@@ -202,13 +204,13 @@ h3 {
           </th>
           <td style="vertical-align: top; text-align: left;">April 2012:
             Pyspread version 0.2.2 has been <a
-              href="http://ftp-master.debian.org/new/pyspread_0.2.2-1.html">uploaded
+              href="https://launchpad.net/debian/+source/pyspread">uploaded
+
 
               to Debian unstable</a> by Andreas Noteng. Many thanks to
-            him for packaging. After clearing the NEW queue, it will be
-            installable in Debian unstable using "apt-get install
-            pyspread". In Ubuntu, it will be available in release 12.10
-            Quantal Quetzal.<br>
+            him for packaging. It is now installable in Debian unstable
+            using "apt-get install pyspread". In Ubuntu, it will be
+            available in release 12.10 Quantal Quetzal.<br>
             <br>
             April 2012: Pyspread 0.2.2 is out. Get it from <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">here</a>.<br>
@@ -288,11 +290,12 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
-          01. May 2012 </span></font></p>
+          23. May 2012 </span></font></p>
   </body>
 </html>
