Contribution page header changed

--- a/contribute.html
+++ b/contribute.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <title>Pyspread - News</title>
+    <title>Pyspread - Contribute</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="Author" content="Martin Manns">
-    <meta name="description" content="Pyspread is a cross-platform
-      Python spreadsheet.">
+    <meta name="description" content="Pyspread is a non-traditional
+      spreadsheet application.">
     <meta name="keywords" content="pyspread, spreadsheet, python, python
       spreadsheet, numpy, wxpython, csv, data mining">
     <style type="text/css">
@@ -100,6 +100,7 @@ h3 {
 }
 
   </style>
+    <meta content="Martin Manns" name="author">
   </head>
   <body>
     <div style="float: right;"> <a
@@ -118,6 +119,7 @@ h3 {
     <div id="menu"><a class="menu" href="index.html">home</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
 |&nbsp;&nbsp;
+
 
 
 
@@ -207,9 +209,11 @@ h3 {
             <meta http-equiv="CONTENT-TYPE" content="text/html;
               charset=UTF-8">
             <p class="western" style="margin-bottom: 0in" lang="en-US">This
+
               information refers to pyspread v. 0.2.2. <br>
               Version 0.1.2 and previous have a different structure.</p>
             <p class="western" style="margin-bottom: 0in;" lang="en-US">The
+
 
 
 
@@ -280,6 +284,7 @@ related
 
 
 
+
               code can be found </p>
             <ul>
               <li>
@@ -324,6 +329,7 @@ related
 
 
 
+
               latter is necessary in order to use the wx constants in
               config.py</p>
             <p class="western" style="margin-bottom: 0in" lang="en-US"><br>
@@ -360,10 +366,11 @@ related
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font> </span><font size="-1"><span style="font-style:
-          italic;">Last changed: 02. May 2012 </span></font></p>
+          italic;">Last changed: 25. August 2012 </span></font></p>
   </body>
 </html>
