Translation project linked to contribution page, deb packages linked to front page

--- a/contribute.html
+++ b/contribute.html
@@ -109,8 +109,8 @@ h3 {
     <!-- Title -->
     <div style="float: left; width: 80px; height: 80px;"><img
         src="images/pyspread.png" style="margin-left: 15px;
-        margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
-        width="44"></div>
+        margin-right: 30px; margin-top: 10px;" alt="Logo" width="44"
+        height="57"></div>
     <div style="width: 400px; height: 80px;">
       <h1 id="title">pyspread</h1>
       <h3>Python power for your tables</h3>
@@ -119,6 +119,7 @@ h3 {
     <div id="menu"><a class="menu" href="index.html">home</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
 |&nbsp;&nbsp;
+
 
 
 
@@ -171,7 +172,12 @@ h3 {
             <ul>
               <li>Multiple 3D sheets in a pys file (started)</li>
               <li>Attribute editing from menu (not started)</li>
-              <li>Chart toolbar (not started)</li>
+              <li>Chart dialog (started)</li>
+              <li>Translation to your language (see <a
+                  href="http://translationproject.org/domain/pyspread.html">translation
+                  project page</a>, <a
+                  href="http://translationproject.org/html/translators.html">howto</a>)<br>
+              </li>
             </ul>
           </td>
           <td style="vertical-align: top;"><br>
@@ -210,9 +216,11 @@ h3 {
               charset=UTF-8">
             <p class="western" style="margin-bottom: 0in" lang="en-US">This
 
+
               information refers to pyspread v. 0.2.2. <br>
               Version 0.1.2 and previous have a different structure.</p>
             <p class="western" style="margin-bottom: 0in;" lang="en-US">The
+
 
 
 
@@ -285,6 +293,7 @@ related
 
 
 
+
               code can be found </p>
             <ul>
               <li>
@@ -330,6 +339,7 @@ related
 
 
 
+
               latter is necessary in order to use the wx constants in
               config.py</p>
             <p class="western" style="margin-bottom: 0in" lang="en-US"><br>
@@ -367,10 +377,11 @@ related
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font> </span><font size="-1"><span style="font-style:
-          italic;">Last changed: 25. August 2012 </span></font></p>
+          italic;">Last changed: 25. October 2012 </span></font></p>
   </body>
 </html>
