--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ h3 {
     <!-- Title -->
     <div style="float: left; width: 80px; height: 80px;"><img
         src="images/pyspread.png" style="margin-left: 15px;
-        margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
-        width="44"></div>
+        margin-right: 30px; margin-top: 10px;" alt="Logo" width="44"
+        height="57"></div>
     <div style="width: 400px; height: 80px;">
       <h1 id="title">pyspread</h1>
       <h3>Python power for your tables</h3>
@@ -120,6 +120,7 @@ h3 {
       |&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
+
 
 
 
@@ -185,6 +186,7 @@ h3 {
                     href="http://rpy.sourceforge.net/">RPy</a></li>
                 <li>Much more via <span style="font-style: italic;">&lt;your
 
+
                     favorite module&gt;</span></li>
               </ul>
             </ul>
@@ -204,13 +206,16 @@ h3 {
           </th>
           <td style="vertical-align: top; text-align: left;">April 2012:
             Pyspread version 0.2.2 has been <a
-              href="https://launchpad.net/debian/+source/pyspread">uploaded
+              href="http://packages.debian.org/testing/python/pyspread">uploaded
 
 
-              to Debian unstable</a> by Andreas Noteng. Many thanks to
-            him for packaging. It is now installable in Debian unstable
-            using "apt-get install pyspread". In Ubuntu, it will be
-            available in release 12.10 Quantal Quetzal.<br>
+
+              to Debian</a> by Andreas Noteng. Many thanks to him for
+            packaging. It is now installable in Debian unstable using
+            "apt-get install pyspread". <a
+              href="http://packages.ubuntu.com/quantal/pyspread">Pyspread
+              is available in Ubuntu</a> in release 12.10 Quantal
+            Quetzal.<br>
             <br>
             April 2012: Pyspread 0.2.2 is out. Get it from <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">here</a>.<br>
@@ -291,11 +296,13 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
-          23. May 2012 </span></font></p>
+
+          25. October 2012 </span></font></p>
   </body>
 </html>
