--- a/contribute.html
+++ b/contribute.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
+<html>
+  <head>
     <title>Pyspread - Contribute</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="Author" content="Martin Manns">
@@ -102,34 +103,46 @@ h3 {
     <meta content="Martin Manns" name="author">
   </head>
   <body>
-    <div style="float: right;"> <a href="http://sourceforge.net/projects/pyspread"><br>
+    <div style="float: right;"> <a
+        href="http://sourceforge.net/projects/pyspread"><br>
       </a></div>
     <!-- Title -->
-    <div style="float: left; width: 80px; height: 80px;"><img src="contribute_files/pyspread.png" style="margin-left: 15px; margin-right: 30px; margin-top: 10px;" alt="Logo" height="57" width="44"></div>
+    <div style="float: left; width: 80px; height: 80px;"><img
+        src="images/pyspread.png" style="margin-left: 15px;
+        margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
+        width="44"></div>
     <div style="width: 400px; height: 80px;">
       <h1 id="title">pyspread</h1>
       <h3>Python power for your tables</h3>
     </div>
     <!-- Menu -->
-    <div id="menu"><a class="menu" href="http://manns.github.com/pyspread/index.html">home</a>&nbsp;
-      |&nbsp;&nbsp; <a class="menu" href="http://manns.github.com/pyspread/download.html">download</a>&nbsp;
+    <div id="menu"><a class="menu" href="index.html">home</a>&nbsp;
+      |&nbsp;&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
 |&nbsp;&nbsp;
 
 
 
 
 
-      <a class="menu" href="http://manns.github.com/pyspread/docs.html">docs</a>&nbsp; |&nbsp;&nbsp; <a style="text-decoration: overline; color: black;" class="menu" href="http://manns.github.com/pyspread/contribute.html">contribute</a>&nbsp; |&nbsp;&nbsp; <a class="menu" href="https://github.com/manns/pyspread/issues" target="_blank">bugs</a><a class="menu" href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
+
+      <a class="menu" href="docs.html">docs</a>&nbsp; |&nbsp;&nbsp; <a
+        style="text-decoration: overline; color: black;" class="menu"
+        href="contribute.html">contribute</a>&nbsp; |&nbsp;&nbsp; <a
+        class="menu" href="https://github.com/manns/pyspread/issues"
+        target="_blank">bugs</a><a class="menu"
+        href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
     </div>
     <p> </p>
-    <table style="text-align: left; width: 100%; margin-left: auto; margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
+    <table style="text-align: left; width: 100%; margin-left: auto;
+      margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
       <tbody>
         <tr>
-          <th style="vertical-align: top; background-color: white; width: 102px;">How to help<br>
+          <th style="vertical-align: top; background-color: white;
+            width: 102px;">How to help<br>
           </th>
-          <td>Thank you for wanting to help pyspread. You can help me
-            with bug reports, translations, icons, coding, ideas and
-            much more.<br>
+          <td>Thank you for wanting to help pyspread. You can help with
+            bug reports, translations, icons, coding, ideas and much
+            more.<br>
           </td>
           <td style="vertical-align: top;"><br>
           </td>
@@ -137,12 +150,14 @@ h3 {
           </td>
         </tr>
         <tr>
-          <th style="vertical-align: top; background-color: white; width: 102px;">contact<br>
+          <th style="vertical-align: top; background-color: white;
+            width: 102px;">contact<br>
           </th>
           <td>For contributions, patches, development discussions and
             ideas please post to the pyspread-dev mailing list by
             sending an e-mail to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
-            You can <a href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
+            You can <a
+              href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
             subscribe to the list.<br>
           </td>
           <td style="vertical-align: top;"><br>
@@ -159,15 +174,18 @@ h3 {
               <li>Multiple 3D sheets in a pys file (started)</li>
               <li>Attribute editing from menu (not started)</li>
               <li>Chart dialog (started)</li>
-              <li>Translation to your language (see <a href="http://translationproject.org/domain/pyspread.html">translation
-                  project page</a>, <a href="http://translationproject.org/html/translators.html">howto</a>)<br>
+              <li>Translation to your language (see <a
+                  href="http://translationproject.org/domain/pyspread.html">translation
+
+                  project page</a>, <a
+                  href="http://translationproject.org/html/translators.html">howto</a>)<br>
               </li>
             </ul>
           </td>
           <td style="vertical-align: top;"><br>
           </td>
           <td style="width: 211px;"><br>
-            <a href="http://manns.github.com/pyspread/images/screenshot_fonts.png"><br>
+            <a href="images/screenshot_fonts.png"><br>
             </a> </td>
         </tr>
         <tr>
@@ -176,11 +194,13 @@ h3 {
           </th>
           <td>
             <ol>
-              <li>Send an e-mail to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>
+              <li>Send an e-mail to <a
+                  href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>
                 that describes your contribution. </li>
               <li>Get a github account.</li>
               <li>Fork the branch that you would like to work with (see
-                <a target="_blank" href="http://help.github.com/fork-a-repo/">github help</a>).<br>
+                <a target="_blank"
+                  href="http://help.github.com/fork-a-repo/">github help</a>).<br>
               </li>
               <li>Issue a pull request when ready.</li>
             </ol>
@@ -194,13 +214,16 @@ h3 {
           <th style="vertical-align: top; width: 102px;">code base<br>
           </th>
           <td style="vertical-align: top;">
-            <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+            <meta http-equiv="CONTENT-TYPE" content="text/html;
+              charset=UTF-8">
             <p class="western" style="margin-bottom: 0in" lang="en-US">This
+
 
 
               information refers to pyspread v. 0.2.2. <br>
               Version 0.1.2 and previous have a different structure.</p>
             <p class="western" style="margin-bottom: 0in;" lang="en-US">The
+
 
 
 
@@ -225,7 +248,8 @@ h3 {
               </li>
             </ul>
             <p class="western" style="margin-bottom: 0in;" lang="en-US">
-              <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+              <meta http-equiv="CONTENT-TYPE" content="text/html;
+                charset=UTF-8">
             </p>
             <p class="western" style="margin-bottom: 0in;" lang="en-US">
               <title></title>
@@ -243,7 +267,8 @@ h3 {
 	-->
 	</style> </p>
             <h2 class="western" lang="en-US">
-              <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+              <meta http-equiv="CONTENT-TYPE" content="text/html;
+                charset=UTF-8">
             </h2>
             <p></p>
             <h2 class="western" lang="en-US">
@@ -273,38 +298,49 @@ related
 
 
 
+
               code can be found </p>
             <ul>
               <li>
-                <p class="western" style="margin-bottom: 0in;" lang="en-US">in the action folder files,</p>
+                <p class="western" style="margin-bottom: 0in;"
+                  lang="en-US">in the action folder files,</p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in the gui folder files (including
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in the gui folder files (including
                   events.py),</p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in lib/clipboard.py, </p>
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in lib/clipboard.py, </p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in lib/gpg.py, </p>
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in lib/gpg.py, </p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in lib/parsers.py, </p>
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in lib/parsers.py, </p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in config.py, </p>
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in config.py, </p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in pyspread.py, </p>
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in pyspread.py, </p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in sysvars.py and </p>
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in sysvars.py and </p>
               </li>
               <li>
-                <p class="western" style="margin-bottom: 0in" lang="en-US">in model/model.py. </p>
+                <p class="western" style="margin-bottom: 0in"
+                  lang="en-US">in model/model.py. </p>
               </li>
             </ul>
             <p class="western" style="margin-bottom: 0in" lang="en-US">The
+
 
 
 
@@ -332,7 +368,11 @@ related
 	</style></td>
           <td style="vertical-align: top;"><br>
           </td>
-          <td style="vertical-align: top;"><a href="http://manns.github.com/pyspread/images/code_structure.png"><img alt="Code structure" title="Code structure" src="contribute_files/code_structure_small.png" style="border: 0px solid; width: 200px; height: 265px;"></a><br>
+          <td style="vertical-align: top;"><a
+              href="images/code_structure.png"><img alt="Code structure"
+                title="Code structure"
+                src="images/code_structure_small.png" style="border: 0px
+                solid; width: 200px; height: 265px;"></a><br>
           </td>
         </tr>
       </tbody>
@@ -344,10 +384,11 @@ related
 
 
 
-            Martin Manns</font></small><font size="-1"><br>
-          Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style="font-style: italic;">
-        </font> </span><font size="-1"><span style="font-style:
-          italic;">Last changed: 25. October 2012 </span></font></p>
-  
 
-</body></html>
+            Martin Manns</font></small><font size="-1"><br>
+          Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
+            style="font-style: italic;">
+        </font> </span><font size="-1"><span style="font-style:
+          italic;">Last changed: 05. December 2012 </span></font></p>
+  </body>
+</html>
